--- a/GW2-Win10/Pages/MainPage.xaml
+++ b/GW2-Win10/Pages/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="GW2_Win10.MainPage"
+    x:Class="GW2_Win10.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GW2_Win10"
