--- a/GW2-Win10/AppShell.xaml
+++ b/GW2-Win10/AppShell.xaml
@@ -19,6 +19,13 @@
                 </StackPanel>
             </t10:HamburgerButtonInfo>
 
+            <t10:HamburgerButtonInfo PageType="pages:CharactersPage" ClearHistory="True">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <SymbolIcon Symbol="People" Width="48" Height="48" />
+                    <TextBlock Text="Characters" Margin="12,0,0,0" VerticalAlignment="Center" />
+                </StackPanel>
+            </t10:HamburgerButtonInfo>
+
             <t10:HamburgerButtonInfo PageType="pages:Map" ClearHistory="True">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <SymbolIcon Symbol="Map" Width="48" Height="48" />
