--- a/GW2-Win10/Pages/HomePage.xaml
+++ b/GW2-Win10/Pages/HomePage.xaml
@@ -6,45 +6,18 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:api="using:GW2_Win10.API"
-    Loaded="OnLoaded"
     mc:Ignorable="d">
     
     <ScrollViewer Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Margin="10,5,20,5">
-            <StackPanel>
-                <!-- Header -->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    
-                    <TextBlock FontSize="16" HorizontalAlignment="Center" Text="{Binding Path=Account.Name}" />
-                    <Button Grid.Column="1" Click="LogOut">Log Out</Button>
-                </Grid>
-                
-                <!-- Characters -->
-                <ItemsControl ItemsSource="{Binding Path=Characters}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapGrid ItemWidth="300" ItemHeight="200" Orientation="Horizontal" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border Background="DarkGray" BorderBrush="Gray" Margin="10">
-                                <StackPanel Margin="10">
-                                    <TextBlock Text="{Binding Path=Name}" FontSize="16" />
-                                    <TextBlock FontSize="14">
-                                        <Run Text="{Binding Path=Gender}" />
-                                        <Run Text="{Binding Path=Race}" />
-                                    </TextBlock>
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock FontSize="26" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       TextWrapping="Wrap" TextAlignment="Center">
+                Welcome to your Guild Wars 2 Assistant!
+            </TextBlock>
         </Grid>
     </ScrollViewer>
 </Page>
