--- a/GW2-Win10/Pages/CharactersPage.xaml
+++ b/GW2-Win10/Pages/CharactersPage.xaml
@@ -6,6 +6,7 @@
     xmlns:vm="using:GW2_Win10.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="OnLoad"
     mc:Ignorable="d">
 
     <Page.DataContext>
