--- a/GW2-Win10/Pages/CharactersPage.xaml
+++ b/GW2-Win10/Pages/CharactersPage.xaml
@@ -15,7 +15,9 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" Visibility="{Binding Path=AccountPart.IsLoggedIn, Converter={StaticResource ResourceKey=InverseBooleanToVisibilityConverter}}">
-            <TextBlock Text="Login to see your characters" FontSize="26" HorizontalAlignment="Center" />
+            <TextBlock FontSize="26" HorizontalAlignment="Center">
+                <Hyperlink Click="GoToSignin">Sign in</Hyperlink> to see your characters
+            </TextBlock>
         </StackPanel>
 
         <Grid Visibility="{Binding Path=AccountPart.IsLoggedIn, Converter={StaticResource ResourceKey=BooleanToVisibilityConverter}}">
